--- a/TestCanOpen/TestCanOpen.ioc
+++ b/TestCanOpen/TestCanOpen.ioc
@@ -34,6 +34,10 @@ Mcu.UserName=STM32F107VBTx
 MxCube.Version=4.26.1
 MxDb.Version=DB.4.0.261
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.CAN1_SCE_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.CAN1_TX_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
